# birds

./: .eslintrc.js  .eslintrc.json  .gitignore  .travis.yml  404.html  Makefile  Procfile  README.md  apidoc.json  app.json  default.nix  index.html  index.js  package.json  start.js  startDev.js  test  test.js  unit.mocha.opts  userauth.js  viewloader.js
birds/: .babelrc  app.js  db.js  middleware.js  template.html  webpack-base.config.js  webpack-dev.config.js  webpack-prod.config.js
birds/api/: index.js
birds/api/apidoc/: api_data.json  api_project.js  api_project.json
birds/api/v1/: auth.js  index.js  lessons.js  middleware.js  teams.js  users.js  util.js
birds/src/: index.css  index.js  index.scss  util.js  util.test.js
birds/src/api/: auth.js  firebase.js  index.js  lessons.js  teams.js  v1.js
birds/src/store/: actions.js  configureStore.js  constants.js  localState.js  selectors.js  selectors.test.js
birds/src/ui/: error.js  header.js  main.js  navBar.js  root.js
birds/test/: api.js  api.spec.js  lessons.spec.js  teams.spec.js  test.js  testApp.js  users.spec.js  util.js
coverage/: coverage.json  coverage.raw.json  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/api/: auth.js.html  index.html  index.js.html  v1.js.html
coverage/lcov-report/birds/: app.js.html  db.js.html  index.html
css/: custom.css  style.css
docs/: api_data.js  api_data.json  api_project.js  api_project.json
haskell-server/: Birds.cabal  Makefile  README.md  shell.nix  stack.yaml
haskell-server/app/: Main.hs
haskell-server/src/: Api.hs  Auth.hs  Config.hs  Models.hs  SModels.hs
haskell-server/src/Api/: .#Auth.hs  Auth.hs  Users.hs
javascript/: userauth.js  viewcontroller.js
js/: database.js  kmap.js  svg-pan-zoom.js  userauth.js  viewloader.js
public/stylesheets/: main.css
server/: .gitignore  apidoc.json  package.json
server/src/: app.js  middleware.js
views/: birdtree.html  changeemail.html  changepassword.html  createlesson.html  dashboard.html  deleteuser.html  forgotpassword.html  home.html  homepage.html  lesson.html  login.html  passwordreset.html  register.html  spoof1.html  spoof2.html  spoof3.html  welcome.html
views 3.25.02 PM/: login.html  register.html
views/pages/: index.ejs
views/partials/: header.ejs
web/: .flowconfig  .gitignore  elm-package.json  package.json
web/public/: index.html  start.js
web/src/: Api.elm  Main.elm  Router.elm  Types.elm  Utils.elm  createStore.js  index.js  root.js  root.test.js
web/tests/: Tests.elm  elm-package.json
(+113 files in other folders)
