name:                Birds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/colescott/birds#readme
license:             BSD3
license-file:        LICENSE
author:              Cole Scott
maintainer:          colescottsf@gmail.com
copyright:           2017 Cole Scott
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Auth, Api, Api.Auth, Config, Api.Users, Models, SModels
  build-depends:       base >= 4.7 && < 5,
                       jwt,
                       servant-server,
                       servant-elm,
                       servant,
                       aeson, 
                       wai, 
                       warp,
                       time,
                       persistent,
                       persistent-template,
                       persistent-postgresql,
                       containers,
                       mtl,
                       text,
                       bcrypt,
                       bytestring,
                       monad-logger,
                       transformers,
                       scientific,
                       wai-extra
                       
  default-language:    Haskell2010

executable Birds-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, 
                       servant-server,
                       servant-elm,
                       servant,
                       aeson, 
                       wai, 
                       warp,
                       time,
                       persistent,
                       persistent-template,
                       persistent-postgresql,
                       mtl,
                       monad-logger,
                       bytestring,
                       bcrypt,
                       safe,
                       Birds
  default-language:    Haskell2010

test-suite Birds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Birds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/colescott/birds
